tests/golden/gitops-aws/platform-backup-recovery/Role__envoy__envoy-gateway-webhook-probe.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  name: envoy-gateway-webhook-probe
  namespace: envoy
rules:
  - apiGroups:
      - ""
    resources:
      - services
    verbs:
      - create
